--- a/papers/Introduction/Introduction.tex
+++ b/papers/Introduction/Introduction.tex
@@ -54,7 +54,7 @@ This is a microscopic analogue of the ``crankshaft'' in a car, converting the li
 We will show that it is the evolution of the energy landscape that lies at the heart of this behavior is very similar to the on of a Thouless charge pump, more specifically to the one demonstrated in cold atom systems \cite{Lohse16}.
 The wealth of effects that emerge because of the combination of relatively well-understood model ingredients is a clear demonstration of an often reoccurring theme in condensed matter: more is different.  
 \\\\
-In Chapter~\ref{ch:CrSDW} the focus will be shifted to the aspect of dynamical control with increased granularity as a result of the indirect perturbation of coupled orders.
+In Chapter~\ref{ch:CrSDW} the focus will be shifted towards the aspect of dynamical control with increased granularity as a result of the indirect perturbation of coupled orders.
 We use the control over a lattice vibration through the excitation of a coupled spin density wave (SDW) in a thin film of elemental Chromium as a case study.
 In this material, a nesting of the Fermi surface results in the stabilization of the SDW, which in turn will optimize bondlengths between antiferromagnetically coupled ions to maximize the gained magnetic exchange energy.
 In essence, this leads to a shortening of bonds between ions with large spins, and a lengthening of those between small spins near the nodes of the SDW, causing a periodic lattice displacement (PLD) that can be probed using X-ray diffraction spectroscopy.
